Started working on group menu

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -45,6 +45,8 @@
     "total_snapshots": "Snapshots",
     "session_id_link": "How to find your session id",
     "sign_out": "Sign out",
+    "join_group": "Join group",
+    "create_group": "Create group",
     "edit_profile_icon_title": "Edit profile",
     "create_profile_icon_title": "Create profile",
     "fetch_snapshot_icon_title": "Fetch snapshot",
@@ -53,6 +55,7 @@
     "notification_icon_title": "Notifications",
     "session_id_icon_title": "Help finding session ID",
     "account_icon_title": "My account",
+    "group_icon_title": "Groups",
     "net_worth_export": "Export data",
     "these_terms_inline": "these terms",
     "update_available": "Version {{version}} available",
