Created a base set of components for Formik 2

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -53,6 +53,7 @@
     "notification_icon_title": "Notifications",
     "session_id_icon_title": "Help finding session ID",
     "account_icon_title": "My account",
+    "toggle_visibility_icon_title": "Show/hide",
     "net_worth_export": "Export data",
     "these_terms_inline": "these terms",
     "update_available": "Version {{version}} available",
