--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -29,7 +29,8 @@
     "net_worth_settings": "Net worth",
     "misc_settings": "Misc",
     "pricing_settings": "Pricing settings",
-    "create_group_dialog_title": "Create new group"
+    "create_group_dialog_title": "Create new group",
+    "join_group_dialog_title": "Join existing group"
   },
   "label": {
     "required": "Required",
