--- a/ExilenceNextApp/public/i18n/en/error.json
+++ b/ExilenceNextApp/public/i18n/en/error.json
@@ -1,3 +1,5 @@
 {
-    "no_characters_in_league": "You have no characters in the selected league"
+    "no_characters_in_league": "You have no characters in the selected league",
+    "group_not_found": "Group not found",
+    "group_already_exists": "Group already exists"
 }
