--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -77,7 +77,8 @@
     "price_treshold": "Select price treshold",
     "requires_snapshot_info": "* = requires a new snapshot to take effect",
     "fetch_snapshot_spinner_title": "Fetching snapshots",
-    "initiating_session_spinner_title": "Initiating session"
+    "initiating_session_spinner_title": "Initiating session",
+    "generate_name_icon_title": "Generate name"
   },
   "value": {
     "none": "None",
