--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -12,7 +12,8 @@
     "new_profile": "New profile",
     "close": "Close",
     "create_group": "Create group",
-    "join_group": "Join group"
+    "join_group": "Join group",
+    "leave_group": "Leave group"
   },
   "title": {
     "login": "Login",
@@ -25,6 +26,7 @@
     "select_characters": "Select your characters",
     "confirm_clear_snapshots": "Clear snapshots for profile",
     "confirm_remove_profile": "Remove profile",
+    "confirm_leave_group": "Leave group",
     "ga_consent_dialog_title": "Terms and conditions",
     "net_worth_settings": "Net worth",
     "misc_settings": "Misc",
@@ -95,6 +97,7 @@
   "body": {
     "clear_snapshots": "Are you sure you want to clear all snapshots for the current profile?",
     "remove_profile": "Are you sure you want to remove your profile?",
+    "leave_group": "Are you sure you want to leave your current group?",
     "ga_consent_main_text": "We use Google Analytics in Exilence Next. This means we track how you interact with the app, in order to improve it further.",
     "ga_consent_sub_text": "To clarify, we don't track anything related to your Path of Exile account in Google Analytics, and can't identify you as a user.",
     "ga_consent_short_text": "By proceeding below, you agree to "
