--- a/ExilenceNextApp/public/i18n/en/error.json
+++ b/ExilenceNextApp/public/i18n/en/error.json
@@ -2,5 +2,7 @@
     "no_characters_in_league": "You have no characters in the selected league",
     "group_not_found": "Group not found",
     "group_already_exists": "Group already exists",
-    "not_connected": "Not connected to server"
+    "not_connected": "Not connected to server",
+    "profile_not_found": "Profile not found",
+    "connection_not_found": "Connection not found"
 }
