Reworked api data integration to be dependent on backend (no longer uses queue)

--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -10,13 +10,13 @@
       "get_prices_for_leagues": "Retrieved prices for all leagues",
       "snapshot": "Snapshot created successfully",
       "new_update_found": "New release was found",
-      "api_join_group": "Successfully joined group",
-      "api_create_profile": "Uploaded profile to server",
-      "api_update_profile": "Uploaded changes to profile to server",
-      "api_remove_profile": "Uploaded removal of profile to server",
-      "api_send_snapshot": "Uploaded snapshot to server",
-      "api_upload_items": "Uploaded items to server",
-      "api_remove_snapshot": "Uploaded removal of snapshot to server",
+      "join_group": "Successfully joined group",
+      "create_profile": "Uploaded profile to server",
+      "update_profile": "Uploaded changes to profile to server",
+      "remove_profile": "Uploaded removal of profile to server",
+      "send_snapshot": "Uploaded snapshot to server",
+      "upload_items": "Uploaded items to server",
+      "remove_snapshot": "Uploaded removal of snapshot to server",
       "reconnected": "Successfully reconnected to the server",
       "authorize": "Authorization successful",
       "run_event_from_queue": "Successfully ran queued event"
@@ -31,13 +31,13 @@
       "get_prices_for_leagues": "Successfully retrieved prices for all leagues",
       "snapshot": "A new snapshot was successfully created and saved",
       "new_update_found": "A new release was found on GitHub",
-      "api_join_group": "Joined a new group on the server",
-      "api_create_profile": "New data was uploaded to the server",
-      "api_update_profile": "New data was uploaded to the server",
-      "api_remove_profile": "New data was uploaded to the server",
-      "api_send_snapshot": "New data was uploaded to the server",
-      "api_upload_items": "New data was uploaded to the server",
-      "api_remove_snapshot": "New data was uploaded to the server",
+      "join_group": "Joined a new group on the server",
+      "create_profile": "New data was uploaded to the server",
+      "update_profile": "New data was uploaded to the server",
+      "remove_profile": "New data was uploaded to the server",
+      "send_snapshot": "New data was uploaded to the server",
+      "upload_items": "New data was uploaded to the server",
+      "remove_snapshot": "New data was uploaded to the server",
       "reconnected": "The connection to the server was reestablished",
       "authorize": "A token was successfully retrieved from server",
       "run_event_from_queue": "A previously failed event was now successfully sent"
@@ -54,17 +54,17 @@
       "get_prices_for_leagues": "Failed retrieving prices for leagues",
       "snapshot": "Failed creating snapshot",
       "check_for_update": "Could not check for update",
-      "api_join_group": "Could not join group",
-      "api_create_profile": "Could not upload profile",
-      "api_update_profile": "Could not upload profile changes",
-      "api_remove_profile": "Could not upload profile changes",
-      "api_send_snapshot": "Could not upload snapshot",
-      "api_upload_items": "Could not upload items",
-      "api_remove_snapshot": "Could not upload snapshot changes",
+      "join_group": "Could not join group",
+      "create_profile": "Could not upload profile",
+      "update_profile": "Could not upload profile changes",
+      "remove_profile": "Could not upload profile changes",
+      "send_snapshot": "Could not upload snapshot",
+      "upload_items": "Could not upload items",
+      "remove_snapshot": "Could not upload snapshot changes",
       "connection_lost": "Connection to server was lost",
       "authorize": "Authorization failed",
       "run_event_from_queue": "Failed to run queued event",
-      "api_group_exists": "Group already exists"
+      "group_exists": "Group already exists"
     },
     "description": {
       "init_session": "A new session could not be initiated",
@@ -75,13 +75,13 @@
       "get_prices_for_leagues": "Failed in retrieving prices for leagues",
       "snapshot": "The snapshot could not be created",
       "check_for_update": "Something went wrong when checking for update",
-      "api_join_group": "Failed when trying to join new group on the server",
-      "api_create_profile": "Failed when trying to upload new profile to server",
-      "api_update_profile": "Failed when trying to upload changes to server",
-      "api_remove_profile": "Failed when trying to upload changes to server",
-      "api_send_snapshot": "Failed when trying to upload snapshot to server",
-      "api_upload_items": "Failed when trying to upload items to server",
-      "api_remove_snapshot": "Failed when trying to upload changes to server",
+      "join_group": "Failed when trying to join new group on the server",
+      "create_profile": "Failed when trying to upload new profile to server",
+      "update_profile": "Failed when trying to upload changes to server",
+      "remove_profile": "Failed when trying to upload changes to server",
+      "send_snapshot": "Failed when trying to upload snapshot to server",
+      "upload_items": "Failed when trying to upload items to server",
+      "remove_snapshot": "Failed when trying to upload changes to server",
       "connection_lost": "We could not establish a connection to the server",
       "authorize": "Could not retrieve a token from the server",
       "run_event_from_queue": "Failed when retrying a previously failed event"
