--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -11,10 +11,9 @@
       "snapshot": "Snapshot created successfully",
       "new_update_found": "New release was found",
       "join_group": "Successfully joined group",
-      "create_profile": "Uploaded profile to server",
-      "update_profile": "Uploaded changes to profile to server",
-      "remove_profile": "Uploaded removal of profile to server",
-      "send_snapshot": "Uploaded snapshot to server",
+      "create_profile": "Successfully created profile",
+      "update_profile": "Successfully updated profile",
+      "send_snapshot": "Successfully sent snapshot",
       "upload_items": "Uploaded items to server",
       "remove_snapshot": "Uploaded removal of snapshot to server",
       "reconnected": "Successfully reconnected to the server",
@@ -32,12 +31,11 @@
       "snapshot": "A new snapshot was successfully created and saved",
       "new_update_found": "A new release was found on GitHub",
       "join_group": "Joined a new group on the server",
-      "create_profile": "New data was uploaded to the server",
-      "update_profile": "New data was uploaded to the server",
-      "remove_profile": "New data was uploaded to the server",
-      "send_snapshot": "New data was uploaded to the server",
-      "upload_items": "New data was uploaded to the server",
-      "remove_snapshot": "New data was uploaded to the server",
+      "create_profile": "The profile was successfully created",
+      "update_profile": "The profile was successfully updated",
+      "send_snapshot": "The snapshot was successfully sent",
+      "upload_items": "Items were successfully uploaded",
+      "remove_snapshot": "The snapshot was successfully removed",
       "reconnected": "The connection to the server was reestablished",
       "authorize": "A token was successfully retrieved from server",
       "run_event_from_queue": "A previously failed event was now successfully sent"
@@ -53,14 +51,13 @@
       "price_stash_items": "Failed pricing items",
       "get_prices_for_leagues": "Failed retrieving prices for leagues",
       "snapshot": "Failed creating snapshot",
-      "check_for_update": "Could not check for update",
-      "join_group": "Could not join group",
-      "create_profile": "Could not upload profile",
-      "update_profile": "Could not upload profile changes",
-      "remove_profile": "Could not upload profile changes",
-      "send_snapshot": "Could not upload snapshot",
-      "upload_items": "Could not upload items",
-      "remove_snapshot": "Could not upload snapshot changes",
+      "check_for_update": "Failed when checking for update",
+      "join_group": "Failed to join group",
+      "create_profile": "Failed to create profile",
+      "update_profile": "Failed to update profile",
+      "send_snapshot": "Failed to send snapshot",
+      "upload_items": "Failed to upload items",
+      "remove_snapshot": "Failed to remove snapshot",
       "connection_lost": "Connection to server was lost",
       "authorize": "Authorization failed",
       "run_event_from_queue": "Failed to run queued event",
@@ -77,11 +74,11 @@
       "check_for_update": "Something went wrong when checking for update",
       "join_group": "Failed when trying to join new group on the server",
       "create_profile": "Failed when trying to upload new profile to server",
-      "update_profile": "Failed when trying to upload changes to server",
-      "remove_profile": "Failed when trying to upload changes to server",
-      "send_snapshot": "Failed when trying to upload snapshot to server",
+      "update_profile": "Failed when trying to update profile",
+      "remove_profile": "Failed when trying to remove profile",
+      "send_snapshot": "Failed when trying to send snapshot",
       "upload_items": "Failed when trying to upload items to server",
-      "remove_snapshot": "Failed when trying to upload changes to server",
+      "remove_snapshot": "Failed when trying to remove snapshot",
       "connection_lost": "We could not establish a connection to the server",
       "authorize": "Could not retrieve a token from the server",
       "run_event_from_queue": "Failed when retrying a previously failed event"
