--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -20,7 +20,8 @@
       "authorize": "Authorization successful",
       "run_event_from_queue": "Successfully ran queued event",
       "get_poe_profile": "Successfully fetched PoE profile",
-      "login_with_oauth": "Successfully logged in"
+      "login_with_oauth": "Successfully logged in",
+      "get_profiles_for_account": "Successfully fetched profiles for account"
     },
     "description": {
       "init_session": "A new session was successfully initiated",
@@ -42,7 +43,8 @@
       "authorize": "A token was successfully retrieved from server",
       "run_event_from_queue": "A previously failed event was now successfully sent",
       "get_poe_profile": "Successfully retrieved your PoE profile from pathofexile.com",
-      "login_with_oauth": "Successfully logged in through pathofexile.com"
+      "login_with_oauth": "Successfully logged in through pathofexile.com",
+      "get_profiles_for_account": "Successfully fetched all profiles for account from server"
     }
   },
   "error": {
@@ -67,7 +69,8 @@
       "run_event_from_queue": "Failed to run queued event",
       "group_exists": "Group already exists",
       "get_poe_profile": "Failed retrieving PoE profile",
-      "login_with_oauth": "Failed to login"
+      "login_with_oauth": "Failed to login",
+      "get_profiles_for_account": "Failed to fetch profiles"
     },
     "description": {
       "init_session": "A new session could not be initiated",
@@ -89,7 +92,8 @@
       "authorize": "Could not retrieve a token from the server",
       "run_event_from_queue": "Failed when retrying a previously failed event",
       "get_poe_profile": "Failed when trying to retrieve your profile from pathofexile.com",
-      "login_with_oauth": "Failed to login through pathofexile.com"
+      "login_with_oauth": "Failed to login through pathofexile.com",
+      "get_profiles_for_account": "Failed when trying to fetch profiles for account"
     },
     "custom_description": {
       "no_stash_tabs_selected_for_profile": "No stash tabs are selected for the profile",
