--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -80,7 +80,8 @@
     "requires_snapshot_info": "* = requires a new snapshot to take effect",
     "fetch_snapshot_spinner_title": "Fetching snapshots",
     "initiating_session_spinner_title": "Initiating session",
-    "generate_name_icon_title": "Generate name"
+    "generate_name_icon_title": "Generate name",
+    "server_offline_title": "Not connected to server"
   },
   "value": {
     "none": "None",
