Reworked active profile to be nullable (in cases where we dont have data from the server yet)

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -82,7 +82,7 @@
     "initiating_session_spinner_title": "Initiating session",
     "generate_name_icon_title": "Generate name",
     "server_offline_title": "Not connected to server",
-    "no_snapshots_title": "No snapshots found for profile"
+    "no_snapshots_title": "No snapshots found for selection"
   },
   "value": {
     "none": "None",
