Improvements to profile management

--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -24,7 +24,8 @@
       "get_profiles_for_account": "Successfully fetched profiles for account",
       "retrieve_snapshot": "Successfully retrieved snapshot",
       "retrieve_latest_snapshot": "Successfully retrieved snapshot",
-      "set_active_profile": "Successfully changed profile"
+      "set_active_profile": "Successfully changed profile",
+      "change_profile_for_connection": "Successfully changed profile for connection"
     },
     "description": {
       "init_session": "A new session was successfully initiated",
@@ -50,7 +51,8 @@
       "get_profiles_for_account": "Successfully fetched all profiles for account from server",
       "retrieve_snapshot": "Successfully retrieved snapshot from server",
       "retrieve_latest_snapshot": "Successfully retrieved latest snapshot for profile",
-      "set_active_profile": "Successfully changed the active profile"
+      "set_active_profile": "Successfully changed the active profile",
+      "change_profile_for_connection": "Successfully changed profile for connection"
     }
   },
   "error": {
@@ -79,7 +81,8 @@
       "get_profiles_for_account": "Failed to fetch profiles",
       "retrieve_snapshot": "Failed to retrieve snapshot",
       "retrieve_latest_snapshot": "Failed to retrieve snapshot",
-      "set_active_profile": "Failed to change profile"
+      "set_active_profile": "Failed to change profile",
+      "change_profile_for_connection": "Failed to change profile for connection"
     },
     "description": {
       "init_session": "A new session could not be initiated",
@@ -105,7 +108,8 @@
       "get_profiles_for_account": "Failed when trying to fetch profiles for account",
       "retrieve_snapshot": "Failed to retrieve snapshot from server",
       "retrieve_latest_snapshot": "Failed to retrieve latest snapshot",
-      "set_active_profile": "Failed to change the active profile"
+      "set_active_profile": "Failed to change the active profile",
+      "change_profile_for_connection": "Failed to change profile for connection"
     },
     "custom_description": {
       "no_stash_tabs_selected_for_profile": "No stash tabs are selected for the profile",
