--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -83,7 +83,7 @@
     "generate_name_icon_title": "Generate name",
     "server_offline_title": "Not connected to server",
     "no_snapshots_title": "No snapshots found for selection",
-    "snapshot_length_requirement_text": "The chart will be displayed when you have at least 20 snapshots"
+    "snapshot_length_requirement_text": "The chart will be displayed when there are at least 10 snapshots"
   },
   "value": {
     "none": "None",
