--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -6,7 +6,7 @@
     "level": "Level",
     "quality": "Quality",
     "corrupted": "Corrupted",
-    "stacksize": "Stacksize",
+    "stacksize": "Quantity",
     "calculated": "Price",
     "total": "Total"
   },
