Created setting for scaling the UI

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -34,7 +34,9 @@
     "create_group_dialog_title": "Create new group",
     "join_group_dialog_title": "Join existing group",
     "snapshot_settings": "Snapshot settings",
-    "snapshot_history_chart": "Snapshot history"
+    "snapshot_history_chart": "Snapshot history",
+    "ui_settings": "Interface",
+    "general": "General"
   },
   "label": {
     "required": "Required",
@@ -87,7 +89,8 @@
     "no_snapshots_title": "No snapshots found for selection",
     "snapshot_length_requirement_text": "The chart will be displayed when there are at least 10 snapshots",
     "auto_snapshotting": "Activate auto snapshotting",
-    "auto_snapshot_interval": "Set auto snapshot interval"
+    "auto_snapshot_interval": "Set auto snapshot interval",
+    "ui_scale": "Interface scale (%)"
   },
   "value": {
     "none": "None",
@@ -100,7 +103,8 @@
     "low_confidence_pricing": "Includes prices with less than 10 listings",
     "price_treshold": "Sets the cutoff for including items",
     "auto_snapshotting": "Handles snapshotting for you at set intervals",
-    "auto_snapshot_interval": "Sets the interval for auto snapshotting"
+    "auto_snapshot_interval": "Sets the interval for auto snapshotting",
+    "ui_scale": "Sets the UI scale"
   },
   "link": {
     "restart_now": "Restart now"
