Added indicator text for manual update when new version has been downloaded

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -74,7 +74,10 @@
     "toggle_visibility_icon_title": "Show/hide",
     "net_worth_export": "Export data",
     "these_terms_inline": "these terms",
-    "update_available": "Version {{version}} available",
+    "update_available": "Update available, ",
+    "click": "click",
+    "here": "here",
+    "to_update_now": "to update now!",
     "prices_fetched_from": "Prices fetched from ",
     "not_available": "N/A",
     "low_confidence_pricing": "Activate low confidence pricing",
