Improved cards (with additional card for income over time)

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -59,6 +59,7 @@
     "graphs": "Graphs",
     "total_value": "Net worth",
     "total_items": "Items",
+    "total_income": "Income",
     "total_snapshots": "Snapshots",
     "session_id_link": "How to find your session id",
     "sign_out": "Sign out",
@@ -82,6 +83,7 @@
     "to_update_now": "to update now!",
     "prices_fetched_from": "Prices fetched from ",
     "not_available": "N/A",
+    "hour_suffix": "/ h",
     "low_confidence_pricing": "Activate low confidence pricing",
     "price_treshold": "Select price treshold",
     "requires_snapshot_info": "* = requires a new snapshot to take effect",
