Added snapshot status messages

--- a/ExilenceNextApp/public/i18n/en/status.json
+++ b/ExilenceNextApp/public/i18n/en/status.json
@@ -4,6 +4,9 @@
         "fetching_stash_tabs": "Fetching stash tabs for {{param}}",
         "creating_default_profile": "Creating default profile: {{param}}",
         "fetching_characters": "Fetching characters",
-        "validating_session": "Validating session"
+        "validating_session": "Validating session",
+        "fetching_stash_tab": "Fetching stash tab",
+        "pricing_items": "Pricing items",
+        "saving_snapshot": "Saving snapshot"
     }
 }
