Reworked how logos are placed and integrated with a support tab

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -40,6 +40,7 @@
     "general": "General"
   },
   "label": {
+    "support": "Support",
     "required": "Required",
     "optional": "Optional",
     "account_name": "Account name",
