Minor ui tweaks & expansion panels

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -80,6 +80,7 @@
     "group_icon_title": "Groups",
     "toggle_visibility_icon_title": "Show/hide",
     "net_worth_export": "Export data",
+    "net_worth_chart": "Net worth chart",
     "these_terms_inline": "these terms",
     "update_available": "Update available, ",
     "click": "click",
