Added overlay to initial stepper

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -67,6 +67,7 @@
     "session_id_link": "How to find your session id",
     "sign_out": "Sign out",
     "join_group": "Join group",
+    "overlay_icon_title": "Open overlay",
     "create_group": "Create group",
     "toggle_menu_title": "Toggle menu",
     "edit_profile_icon_title": "Edit profile",
