--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -10,7 +10,7 @@
   "body": {
     "initial_step": "This tour will guide you through the main functions of the app to get you started quickly.",
     "profile_step": "In this area you can manage your profiles, and create multiple ones for different setups for quick access.",
-    "snapshot_step": "This is where the magic happens, take snapshots to see your current net worth status!",
+    "snapshot_step": "This is where you take snapshots to see your current net worth, you can also enable automatic snapshotting in the settings.",
     "overlay_step": "Here you can toggle the overlay, for a slim overview while you map!",
     "group_step": "Here you can group up with your friends to see your combined net worth status.",
     "notifications_step": "Everything that happens in the app will be displayed here."
